# focaslab_f1tenth

./: Dockerfile  README.md
autoracing/: CMakeLists.txt  package.xml
autoracing_msgs/: CMakeLists.txt  package.xml
autoracing_msgs/msg/: Target.msg
autoracing_ros/: CMakeLists.txt  package.xml
autoracing_ros/include/autoracing_core/: Abstraction.hpp  GameSolver.hpp  InputOutput.hpp  StaticController.hpp  TransitionFunction.hpp  WinningDomain.hpp  scots.hpp
autoracing_ros/launch/: autonomous_racing.launch  target_set.launch
autoracing_ros/scripts/: target_estimation.py  target_generation.py  target_get.py
autoracing_ros/src/: closed_loop.cpp  origin_pose_publisher.cpp  robot_pose_publisher.cpp  scotsActionClient.cpp  scotsActionServer.cpp
autoracing_simulations/: CMakeLists.txt  package.xml
autoracing_simulations/launch/: ackermann_slam.launch
ex_vehicle7/: sys_post.h  sys_post.m  vehicle7d.cfg
f1tenth_simulator/: CMakeLists.txt  params.yaml
f1tenth_simulator/launch/: simulator.rviz
f1tenth_simulator/maps/: berlin.yaml  mtl.yaml  mtl_1.pgm  stata_basement.yaml  torino.yaml  torino_1.pgm
f1tenth_simulator/node/: behavior_controller.cpp  mux.cpp  random_walk.cpp
