<?xml version="1.0"?>
<package format="2">
  <name>autoracing</name>
  <version>1.0.0</version>
  <description>Ros package for the Autonomous Exploration (meta package).</description>

  <maintainer email="allemmbinn@gmail.com">Allen Emmanuel Binny</maintainer>
  <author email="allemmbinn@gmail.com">Allen Emmanuel Binny</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/</url>
  <url type="repository">https://github.com/FocasLab/focaslab_f1tenth</url>
  <url type="bugtracker">https://github.com/FocasLab/focaslab_f1tenth/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>autoracing_msgs</exec_depend>
  <exec_depend>autoracing_ros</exec_depend>
  <exec_depend>autoracing_simulations</exec_depend>
  <export>
    <metapackage/>
  </export>
</package>
