<?xml version="1.0"?>
<package format="2">
  <name>autoracing_msgs</name>
  <version>1.0.0</version>
  <description>Message and Action type: Custom messages and action for Autonomous Racing packages.</description>

  <maintainer email="allemmbinn@gmail.com">Allen Emmanuel Binny</maintainer>
  <author email="allemmbinn@gmail.com">Allen Emmanuel Binny</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/autoracing_msgs</url>
  <url type="repository">https://github.com/FocasLab/focaslab_f1tenth</url>
  <url type="bugtracker">https://github.com/FocasLab/focaslab_f1tenth/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
